# VS-LeakKG_v2

./: .gitignore  AUDIT_FINAL.md  CHANGELOG.md  CHECKPOINT.md  LINUX_RUN_REPORT_PHASE1.md  LINUX_RUN_REPORT_PHASE1_REVIEW.md  May24_report.md  PHASE1_FINAL_REPORT.md  PHASE2_DRUGCLIP_BLOCKER.md  PHASE2_SPRINT_FINAL.md  PHASE2_SPRINT_PRELIM.md  PHASE2_STATUS.md  README.md  REVIEW_PHASE1.md  conftest.py  proposal.tex  pyproject.toml
docs/: how-to-run.md  linux-agent-prompt.md  linux-todo.md  phase2-agent-prompt.md
docs/phase2/: drugclip-investigation.md  ligunity-investigation.md  sprint-investigation.md  training-plan.md
outputs_run1_50k/phase1/: dekois_summary.csv  dude_summary.csv  litpcba_summary.csv  pdbbind_summary.csv  phase1_combined.csv
outputs_run1_50k/tables/: table1_kg_stats.csv  table2_leakage_groups.csv  table5_validation_contamination.csv
outputs_run3_pdbbind_pk/phase1/: dekois_summary.csv  dude_summary.csv  litpcba_summary.csv  pdbbind_summary.csv  phase1_combined.csv
outputs_run3_pdbbind_pk/tables/: table1_kg_stats.csv  table2_leakage_groups.csv  table5_validation_contamination.csv
outputs_run4_full/phase1_full/: dekois_summary.csv  dude_summary.csv  litpcba_summary.csv  pdbbind_summary.csv  phase1_combined.csv
scripts/: phase3_seed3_queue.sh  splits_review_master_chain.sh
tools/: build_protein_seq_lookup.py  build_random_pdbbind_split.py  build_split_sensitivity.py  consolidate_phase1_report.py  phase1_review.py  run_audit_plots.py  run_lr_baseline.py  run_morgan_rf_random.py  sprint_csv_from_v2.py  v2_to_drugclip_lmdb.py  v2_to_sprint_csv.py
(+70 files in other folders)
