[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsleakkg-v2"
version = "2.0.0.dev0"
description = "VS-LeakKG v2: typed contamination graph for SBVS benchmark integrity (Mode A / Mode B)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ho Viet Duc Luong" }]

dependencies = [
    "polars>=0.20",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
graph = ["networkx>=3.0", "python-louvain>=0.16"]
milp = ["pulp>=2.7"]
chem = ["rdkit>=2023.9"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/kongwoang/VS-LeakKG_v2"
"v1 repo" = "https://github.com/kongwoang/VS-LeakKG"

[tool.setuptools.packages.find]
where = ["src"]
